# pak

./: README.md  setup.cfg
src/pascha/: greek.py  test.py
src/pascha_pkg_denchron.egg-info/: PKG-INFO  SOURCES.txt
